  server-background, or standalone. (Shlomy Reinstein)

- Added configurable highlighting of the matching text in hypersearch results,
  which is part of feature request #2446121. (Shlomy Reinstein)

- The JarClassLoader now allows to open resources from another jar
  (Matthieu Casanova)

- Implemented feature request #2668434: fullscreen-mode. (Shlomy Reinstein)
}}}
{{{ API Changes

- The keybindings are reloaded when the properties are changed in the standalone
  textarea, and the StandaloneActionSet now takes an url to the actions.xml
  as constructor parameter (patch #2304608) (Dakshinamurthy Karra)

- Added jEdit.openFile(EditPane, ....) methods to explicitely choose an editPane
  to open a file (Matthieu Casanova)

- Added jEdit.newFile(EditPane, ...) methods to explicitely choose an EditPane
  to create a new file (Matthieu Casanova)

- Added org.gjt.sp.jedit.menu.MenuItemTextComparator as the preferred
  alternative for deprecated MiscUtilities.MenuItemCompare.
  (Eric Berry - SF.net patch #2308329)

- Removed BufferSet#getScope(). The scope of bufferset is a property of
  EditPane. Added EditPane#getBufferSetScope() and setBufferSetScope().
  Also removed EditPane#setBufferSet(), which was the way to set the
  scope of buffer set. (Kazutoshi Satoda)

- Moved access methods for BufferSet instances to be more straightforward.
    - jEdit.getBufferSetManager().getGlobalBufferSet()
      -> jEdit.getGlobalBufferSet()
    - jEdit.getViewBufferSet(view)
      -> view.getLocalBufferSet()
    - jEdit.getEditPaneBufferSet(editPane) /* this might be unused one */
      -> editPane.getBufferSet() /* this is currently used one */

- Removed BufferSetManager#hasListeners() which had always returned true.

- Removed BufferSetManager#clear() which just made inconsistent state.

- Added OperatingSystem.hasJava16() method and made deprecated
  OperatingSystem.hasJava15() and OperatingSystem.hasJava14() since jEdit
  requires Java 1.5 at least (Matthieu Casanova)
